--- a/src/main/resources/templates/admin/admin_pending_def_approvals.html
+++ b/src/main/resources/templates/admin/admin_pending_def_approvals.html
@@ -83,17 +83,9 @@
 		}
 	</style>
 </head>
-
 <body>
-
-
-<!-- Include the header fragment -->
-<div th:replace="fragments/headerFragment :: header"></div>
-
-<!-- Include the aside fragment -->
-<div th:replace="fragments/asideFragment :: aside"></div>
-
-
+<th:block th:replace="~{fragments/headerFragment :: header}"></th:block>
+<th:block th:replace="~{fragments/asideFragment :: aside}"></th:block>
 <main id="main" class="main">
 	<div class="pagetitle">
 		<h1>Pending Project Definitions</h1>
@@ -107,7 +99,12 @@
 	</div>
 	<input type="text" class="mb-4" id="searchInput"
 		   placeholder="Search...">
-
+	<div th:if="${successMessage}" class="alert alert-success" role="alert">
+		<span th:text="${successMessage}"></span>
+	</div>
+	<div th:if="${errorMessage}" class="alert alert-danger" role="alert">
+		<span th:text="${errorMessage}"></span>
+	</div>
 	<table class="table datatable table-bordered">
 		<thead>
 		<tr>
