--- a/src/main/resources/templates/admin/allocate_guide.html
+++ b/src/main/resources/templates/admin/allocate_guide.html
@@ -80,15 +80,9 @@
 	</style>
 </head>
 <body>
-
-<!-- Include the header fragment -->
-<div th:replace="fragments/headerFragment :: header"></div>
-
-<!-- Include the aside fragment -->
-<div th:replace="fragments/asideFragment :: aside"></div>
-
+<th:block th:replace="~{fragments/headerFragment :: header}"></th:block>
+<th:block th:replace="~{fragments/asideFragment :: aside}"></th:block>
 <main id="main" class="main">
-
 	<div class="pagetitle">
 		<h1>Manage Group</h1>
 		<nav>
@@ -100,6 +94,9 @@
 		</nav>
 		<input type="text" class="mb-3 mt-2 pr-5" id="searchInput"
 			   placeholder="Start typing...">
+	</div>
+	<div th:if="${successMessage}" class="alert alert-success" role="alert">
+		<span th:text="${successMessage}"></span>
 	</div>
 
 	<ul class="nav nav-tabs nav-justified">
