--- a/src/main/resources/templates/admin/cancelled_interns_relieving_records.html
+++ b/src/main/resources/templates/admin/cancelled_interns_relieving_records.html
@@ -118,7 +118,7 @@
                     <input type="radio" name="password" value="No" required
                            th:checked="${record != null and record.password == 'No'}"> No
                     <input type="radio" name="password" value="Not Applicable" required
-                           th:checked="${record != null and record.password == 'Not Applicable'}"> Not Applicable
+                           th:checked="${record == null or record.password == 'Not Applicable'}"> Not Applicable
                   </div>
                 </div>
                 <div class="col-md-6 form-group">
@@ -129,7 +129,7 @@
                     <input type="radio" name="media" value="No" required
                            th:checked="${record != null and record.media == 'No'}"> No
                     <input type="radio" name="media" value="Not Applicable" required
-                           th:checked="${record != null and record.media == 'Not Applicable'}"> Not Applicable
+                           th:checked="${record == null or record.media == 'Not Applicable'}"> Not Applicable
                   </div>
                 </div>
               </div>
@@ -142,7 +142,7 @@
                     <input type="radio" name="status" value="No" required
                            th:checked="${record != null and record.status == 'No'}"> No
                     <input type="radio" name="status" value="Not Applicable" required
-                           th:checked="${record != null and record.status == 'Not Applicable'}"> Not Applicable
+                           th:checked="${record == null or record.status == 'Not Applicable'}"> Not Applicable
                   </div>
                 </div>
                 <div class="col-md-6 form-group">
@@ -153,7 +153,7 @@
                     <input type="radio" name="project" value="No" required
                            th:checked="${record != null and record.project == 'No'}"> No
                     <input type="radio" name="project" value="Not Applicable" required
-                           th:checked="${record != null and record.project == 'Not Applicable'}"> Not Applicable
+                           th:checked="${record == null or record.project == 'Not Applicable'}"> Not Applicable
                   </div>
                 </div>
                 <div class="col-md-6 form-group">
@@ -164,7 +164,7 @@
                     <input type="radio" name="thesis" value="No" required
                            th:checked="${record != null and record.thesis == 'No'}"> No
                     <input type="radio" name="thesis" value="Not Applicable" required
-                           th:checked="${record != null and record.thesis == 'Not Applicable'}"> Not Applicable
+                           th:checked="${record == null or record.thesis == 'Not Applicable'}"> Not Applicable
                   </div>
                 </div>
                 <div class="col-md-6 form-group">
@@ -175,7 +175,7 @@
                     <input type="radio" name="books" value="No" required
                            th:checked="${record != null and record.books == 'No'}"> No
                     <input type="radio" name="books" value="Not Applicable" required
-                           th:checked="${record != null and record.books == 'Not Applicable'}"> Not Applicable
+                           th:checked="${record == null or record.books == 'Not Applicable'}"> Not Applicable
                   </div>
                 </div>
                 <div class="col-md-6 form-group">
@@ -186,7 +186,7 @@
                     <input type="radio" name="subscription" value="No" required
                            th:checked="${record != null and record.subscription == 'No'}"> No
                     <input type="radio" name="subscription" value="Not Applicable" required
-                           th:checked="${record != null and record.subscription == 'Not Applicable'}"> Not Applicable
+                           th:checked="${record == null or record.subscription == 'Not Applicable'}"> Not Applicable
                   </div>
                 </div>
                 <div class="col-md-6 form-group">
@@ -197,7 +197,7 @@
                     <input type="radio" name="accessRights" value="No" required
                            th:checked="${record != null and record.accessRights == 'No'}"> No
                     <input type="radio" name="accessRights" value="Not Applicable" required
-                           th:checked="${record != null and record.accessRights == 'Not Applicable'}"> Not Applicable
+                           th:checked="${record == null or record.accessRights == 'Not Applicable'}"> Not Applicable
                   </div>
                 </div>
                 <div class="col-md-6 form-group">
@@ -208,7 +208,7 @@
                     <input type="radio" name="pendrives" value="No" required
                            th:checked="${record != null and record.pendrives == 'No'}"> No
                     <input type="radio" name="pendrives" value="Not Applicable" required
-                           th:checked="${record != null and record.pendrives == 'Not Applicable'}"> Not Applicable
+                           th:checked="${record == null or record.pendrives == 'Not Applicable'}"> Not Applicable
                   </div>
                 </div>
                 <div class="col-md-6 form-group">
@@ -219,7 +219,7 @@
                     <input type="radio" name="unusedCd" value="No" required
                            th:checked="${record != null and record.unusedCd == 'No'}"> No
                     <input type="radio" name="unusedCd" value="Not Applicable" required
-                           th:checked="${record != null and record.unusedCd == 'Not Applicable'}"> Not Applicable
+                           th:checked="${record == null or record.unusedCd == 'Not Applicable'}"> Not Applicable
                   </div>
                 </div>
                 <div class="col-md-6 form-group">
@@ -230,7 +230,7 @@
                     <input type="radio" name="backupProject" value="No" required
                            th:checked="${record != null and record.backupProject == 'No'}"> No
                     <input type="radio" name="backupProject" value="Not Applicable" required
-                           th:checked="${record != null and record.backupProject == 'Not Applicable'}"> Not Applicable
+                           th:checked="${record == null or record.backupProject == 'Not Applicable'}"> Not Applicable
                   </div>
                 </div>
                 <div class="col-md-6 form-group">
@@ -241,20 +241,20 @@
                     <input type="radio" name="system" value="No" required
                            th:checked="${record != null and record.system == 'No'}"> No
                     <input type="radio" name="system" value="Not Applicable" required
-                           th:checked="${record != null and record.system == 'Not Applicable'}"> Not Applicable
+                           th:checked="${record == null or record.system == 'Not Applicable'}"> Not Applicable
                   </div>
                 </div>
-                <div class="col-md-6 form-group">
-                  <label>Identity Cards:</label>
-                  <div class="radio-group">
-                    <input type="radio" name="identityCards" value="Yes" required
-                           th:checked="${record != null and record.identityCards == 'Yes'}"> Yes
-                    <input type="radio" name="identityCards" value="No" required
-                           th:checked="${record != null and record.identityCards == 'No'}"> No
-                    <input type="radio" name="identityCards" value="Not Applicable" required
-                           th:checked="${record != null and record.identityCards == 'Not Applicable'}"> Not Applicable
-                  </div>
-                </div>
+<!--                <div class="col-md-6 form-group">-->
+<!--                  <label>Identity Cards:</label>-->
+<!--                  <div class="radio-group">-->
+<!--                    <input type="radio" name="identityCards" value="Yes" required-->
+<!--                           th:checked="${record != null and record.identityCards == 'Yes'}"> Yes-->
+<!--                    <input type="radio" name="identityCards" value="No" required-->
+<!--                           th:checked="${record != null and record.identityCards == 'No'}"> No-->
+<!--                    <input type="radio" name="identityCards" value="Not Applicable" required-->
+<!--                           th:checked="${record == null or record.identityCards == 'Not Applicable'}"> Not Applicable-->
+<!--                  </div>-->
+<!--                </div>-->
                 <div class="col-md-6 form-group">
                   <label>Financial/Stipend Outstanding:</label>
                   <div class="radio-group">
@@ -263,7 +263,7 @@
                     <input type="radio" name="stipend" value="No" required
                            th:checked="${record != null and record.stipend == 'No'}"> No
                     <input type="radio" name="stipend" value="Not Applicable" required
-                           th:checked="${record != null and record.stipend == 'Not Applicable'}"> Not Applicable
+                           th:checked="${record == null or record.stipend == 'Not Applicable'}"> Not Applicable
                   </div>
                 </div>
                 <div class="col-md-6 form-group">
@@ -274,7 +274,7 @@
                     <input type="radio" name="information" value="No" required
                            th:checked="${record != null and record.information == 'No'}"> No
                     <input type="radio" name="information" value="Not Applicable" required
-                           th:checked="${record != null and record.information == 'Not Applicable'}"> Not Applicable
+                           th:checked="${record == null or record.information == 'Not Applicable'}"> Not Applicable
                   </div>
                 </div>
                 <div class="col-md-6 form-group">
@@ -296,6 +296,15 @@
                   </div>
                 </div>
                 <div class="col-md-6 form-group">
+                  <label>Send To Accountant:</label>
+                  <div class="radio-group">
+                    <input type="radio" name="sendAccount" value="Yes" required
+                           th:checked="${record != null and record.sendAccount == 'Yes'}"> Yes
+                    <input type="radio" name="sendAccount" value="No" required
+                           th:checked="${record != null and record.sendAccount == 'No'}"> No
+                  </div>
+                </div>
+                <div class="col-md-6 form-group">
                   <label>Attendance:</label>
                   <div class="radio-group">
                     <input type="text" name="attendance" class="form-control" id="attendance"
@@ -308,7 +317,8 @@
                   <div class="radio-group">
                     <input type="text" name="others" class="form-control" id="others"
                            placeholder="Any Other:" required
-                           th:value="${record != null ? record.others : ''}">
+                           th:value="${record == null ? 'Nill' : record.others}">
+
                   </div>
                 </div>
               </div>
@@ -374,6 +384,31 @@
                         .catch(error => {
                           console.error("Error fetching intern name: ", error);
                         });
+              }
+            });
+          </script>
+          <script>
+            document.getElementById("internId").addEventListener("change", function () {
+              var internId = this.value;
+
+              if (internId) {
+                fetch("/bisag/admin/getJoiningDate/" + internId)
+                        .then(response => {
+                          if (!response.ok) {
+                            throw new Error("Network response was not ok");
+                          }
+                          return response.text();
+                        })
+                        .then(data => {
+                          if (data) {
+                            document.getElementById("joiningDate").value = data;
+                          } else {
+                            document.getElementById("joiningDate").value = "";
+                          }
+                        })
+                        .catch(error => console.error("Error fetching joining date:", error));
+              } else {
+                document.getElementById("joiningDate").value = "";
               }
             });
           </script>
