--- a/src/main/resources/templates/admin/create_group.html
+++ b/src/main/resources/templates/admin/create_group.html
@@ -16,10 +16,6 @@
 		  crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<meta content="" name="description">
 	<meta content="" name="keywords">
-
-
-
-
 	<style>
 		body {
 			display: block;
@@ -82,22 +78,15 @@
 			background-size: 16px 16px; /* Adjust the size of the icon */
 			background-repeat: no-repeat;
 			background-position: right center;
-			/* Position the icon to the right center */
 			padding-right: 20px; /* Add some padding to accommodate the icon */
 		}
 	</style>
 </head>
 
 <body>
-
-<!-- Include the header fragment -->
-<div th:replace="fragments/headerFragment :: header"></div>
-
-<!-- Include the aside fragment -->
-<div th:replace="fragments/asideFragment :: aside"></div>
-
+<th:block th:replace="~{fragments/headerFragment :: header}"></th:block>
+<th:block th:replace="~{fragments/asideFragment :: aside}"></th:block>
 <main id="main" class="main">
-
 	<div class="pagetitle">
 		<h1>Create Groups</h1>
 		<nav>
@@ -107,8 +96,12 @@
 			</ol>
 		</nav>
 	</div>
-	<!-- End Page Title -->
-
+	<div th:if="${successMessage}" class="alert alert-success" role="alert">
+		<span th:text="${successMessage}"></span>
+	</div>
+	<div th:if="${errorMessage}" class="alert alert-danger" role="alert">
+		<span th:text="${errorMessage}"></span>
+	</div>
 	<section class="section">
 		<div class="row">
 			<div class="col-lg-12">
