--- a/src/main/resources/templates/admin/current_weekly_report.html
+++ b/src/main/resources/templates/admin/current_weekly_report.html
@@ -183,7 +183,7 @@
                                           class="badge badge-danger ml-2"></span>
                                 </th>
                                 <th style="width: 30%;">
-                                    <span th:text="'Project: ' + ${group.projectDefinition}"></span>
+                                    <span th:text="'Project: ' + (${group.projectDefinition} ?: 'Not Defined')"></span>
                                 </th>
                                 <th style="width: 20%;">
                                     <span th:text="'Guide: ' + ${group.guide.name}"></span>
