--- a/src/main/resources/templates/admin/guide_list.html
+++ b/src/main/resources/templates/admin/guide_list.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-
 <head>
 	<meta charset="utf-8">
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
-
 	<title>Guide List</title>
 	<link rel="stylesheet"
 		  href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -16,7 +14,6 @@
 		  crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<meta content="" name="description">
 	<meta content="" name="keywords">
-
 	<style>
 		body {
 			display: block;
@@ -84,15 +81,9 @@
 		}
 	</style>
 </head>
-
 <body>
-
-<!-- Include the header fragment -->
-<div th:replace="fragments/headerFragment :: header"></div>
-
-<!-- Include the aside fragment -->
-<div th:replace="fragments/asideFragment :: aside"></div>
-
+<th:block th:replace="~{fragments/headerFragment :: header}"></th:block>
+<th:block th:replace="~{fragments/asideFragment :: aside}"></th:block>
 <main id="main" class="main">
 
 	<div class="pagetitle">
@@ -105,7 +96,12 @@
 		</nav>
 	</div>
 	<!-- End Page Title -->
-
+	<div th:if="${successMessage}" class="alert alert-success" role="alert">
+		<span th:text="${successMessage}"></span>
+	</div>
+	<div th:if="${errorMessage}" class="alert alert-danger" role="alert">
+		<span th:text="${errorMessage}"></span>
+	</div>
 	<section class="section">
 		<div class="row">
 			<div class="col-lg-12">
@@ -160,11 +156,8 @@
 							</tr>
 							</tbody>
 						</table>
-						<!-- End Table with stripped rows -->
-
 					</div>
 				</div>
-
 			</div>
 		</div>
 		<div class="d-flex justify-content-center">
@@ -174,21 +167,14 @@
 			</button>
 		</div>
 	</section>
-
-
-
-
-	<!-- Include the footer fragment -->
 	<div th:replace="fragments/footerFragment :: footer"></div>
 </main>
-<!-- End #main -->
 <script
 		src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script>
 	$(document)
 			.ready(
 					function() {
-						// Add click event listener to table headers for sorting
 						$('.table th').click(
 								function() {
 									var table = $(this).parents('table')
@@ -217,14 +203,11 @@
 												valB);
 							};
 						}
-
-						// Function to get the value of a cell
 						function getCellValue(row, index) {
 							return $(row).children('td').eq(index).text();
 						}
 					});
-</script>
-<script>
+
 	document.addEventListener('DOMContentLoaded', function() {
 		var searchInput = document.getElementById('searchInput');
 		var tableRows = document.querySelectorAll('.table tbody tr');
@@ -250,7 +233,5 @@
 		});
 	});
 </script>
-
 </body>
-
 </html>
