--- a/src/main/resources/templates/admin/relieving_records_list.html
+++ b/src/main/resources/templates/admin/relieving_records_list.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Total Interns</title>
+  <title>Relieving Records List</title>
   <link rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
@@ -150,25 +150,19 @@
 </head>
 
 <body>
-
-<!-- Include the header fragment -->
 <div th:replace="fragments/headerFragment :: header"></div>
-
-<!-- Include the aside fragment -->
 <div th:replace="fragments/asideFragment :: aside"></div>
 
 <main id="main" class="main">
-
   <div class="pagetitle">
-    <h1>Total Interns</h1>
+    <h1>Relieving Records</h1>
     <nav>
       <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="/bisag/admin/intern_application/new_interns">Intern</a></li>
-        <li class="breadcrumb-item active">Total Interns</li>
+        <li class="breadcrumb-item active">Relieving Records List</li>
       </ol>
     </nav>
   </div>
-  <!-- End Page Title -->
 
   <section class="section">
     <div class="row">
