--- a/src/main/resources/templates/admin/update_project_def.html
+++ b/src/main/resources/templates/admin/update_project_def.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
@@ -10,9 +9,6 @@
     <meta content="" name="description">
     <meta content="" name="keywords">
     <style>
-
-        /*nee css for*/
-
         .form-container {
             width: 60%;
             margin: auto;
@@ -57,11 +53,6 @@
             font-weight: bold;
         }
 
-        /*nee css for*/
-
-
-
-             /* Style for the dropdown button */
         .dropdown button {
             background-color: #4CAF50;
             color: white;
@@ -70,8 +61,6 @@
             border: none;
             cursor: pointer;
         }
-
-        /* Style for the dropdown content (hidden by default) */
         .dropdown-content {
             display: none;
             position: absolute;
@@ -79,8 +68,6 @@
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
             z-index: 1;
         }
-
-        /* Style for each dropdown item */
         .dropdown-content a {
             color: black;
             padding: 12px 16px;
@@ -88,12 +75,9 @@
             display: block;
         }
 
-        /* Show the dropdown content when the dropdown button is hovered over */
         .dropdown:hover .dropdown-content {
             display: block;
         }
-
-        /* Exclude hover effect for elements with "exclude-hover" class */
         tr.hover-element th div.dropdown .rounded button.btn-primary:hover {
             background-color: transparent; /* or any other styling you want */
             color: inherit; /* or any other styling you want */
@@ -108,37 +92,32 @@
 
         .table th {
             cursor: pointer;
-            background-image: url('default-icon.png'); /* Default icon image */
-            background-size: 16px 16px; /* Adjust the size of the icon */
+            background-image: url('default-icon.png');
+            background-size: 16px 16px;
             background-repeat: no-repeat;
             background-position: right center;
-            /* Position the icon to the right center */
-            padding-right: 20px; /* Add some padding to accommodate the icon */
+            padding-right: 20px;
         }
     </style>
 </head>
 
 <body>
-
-<div th:replace="fragments/headerFragment :: header"></div>
-<!-- Include the header fragment -->
-
-
-
-<!-- Include the aside fragment -->
-<div th:replace="fragments/asideFragment :: aside"></div>
-
-
+<th:block th:replace="~{fragments/headerFragment :: header}"></th:block>
+<th:block th:replace="~{fragments/asideFragment :: aside}"></th:block>
 <main id="main" class="main">
     <div class="form-container">
-        <h2>Assign Project Definition</h2>
-
-        <!-- Display Error or Success Messages -->
+        <h2>Assign/Update Project Definition</h2>
         <div th:if="${error}" class="error-message">
             <p th:text="${error}"></p>
         </div>
         <div th:if="${success}" class="message">
             <p th:text="${success}"></p>
+        </div>
+        <div th:if="${successMessage}" class="alert alert-success" role="alert">
+            <span th:text="${successMessage}"></span>
+        </div>
+        <div th:if="${errorMessage}" class="alert alert-danger" role="alert">
+            <span th:text="${errorMessage}"></span>
         </div>
         <form th:action="@{/bisag/admin/update_project_def}" method="post">
             <label>Select Group:</label>
@@ -166,7 +145,7 @@
             </label>
 
             <button type="submit"
-                    onclick="return confirm('Are you sure you want to assign this definition?')">Assign Definition</button>
+                    onclick="return confirm('Are you sure you want to assign this definition?')">Assign/Update Definition</button>
 
             <script th:inline="javascript">
                 let groupInternMap = [[${groupInternMap}]];
